[package]
name = "stdlib-rs"
version = "0.0.1"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/stdlib-rs"
documentation = "https://docs.rs/stdlib-rs"
description = "A Personal Standard Library in Rust"

[dependencies]
man = { version = "0.3.0", optional = true }

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[features]
build_deps = ["man"]

